--- a/admin/php.ini
+++ b/admin/php.ini
@@ -150,7 +150,7 @@ serialize_precision = 100
 ; with future versions of the language (you will receive a warning each time
 ; you use this feature, and the argument will be passed by value instead of by
 ; reference).
-allow_call_time_pass_reference = On
+;;allow_call_time_pass_reference = On
 
 ; Safe Mode
 ;
@@ -283,11 +283,9 @@ display_startup_errors = Off
 ; Log errors into a log file (server-specific log, stderr, or error_log (below))
 ; As stated above, you're strongly advised to use error logging in place of
 ; error displaying on production web sites.
-log_errors = On                  ;
 
 ; Set maximum length of log_errors. In error_log information about the source is
 ; added. The default is 1024 and 0 allows to not apply any maximum length at all.
-log_errors = On                  ;
 
 ; Do not log repeated messages. Repeated errors must occur in same file on same
 ; line until ignore_repeated_source is set true.
@@ -378,7 +376,7 @@ gpc_order = "GPC"
 ;
 
 ; Magic quotes for incoming GET/POST/Cookie data.
-magic_quotes_gpc = On
+;magic_quotes_gpc = On
 
 ; Magic quotes for runtime-generated data, e.g. data from SQL, from exec(), etc.
 magic_quotes_runtime = Off    
@@ -1121,3 +1119,4 @@ zend_optimizer.optimization_level=15
 ;zend_extension_manager.optimizer_ts=/usr/local/Zend/lib/Optimizer
 ;zend_extension=/usr/local/Zend/lib/ZendExtensionManager.so
 ;zend_extension_ts=/usr/local/Zend/lib/ZendExtensionManager_TS.so
+log_errors = Off
