--- a/admin/php.ini
+++ b/admin/php.ini
@@ -1119,4 +1119,4 @@ zend_optimizer.optimization_level=15
 ;zend_extension_manager.optimizer_ts=/usr/local/Zend/lib/Optimizer
 ;zend_extension=/usr/local/Zend/lib/ZendExtensionManager.so
 ;zend_extension_ts=/usr/local/Zend/lib/ZendExtensionManager_TS.so
-log_errors = Off
+log_errors = On
